* Minor update: (180107)
- Added [QVPN VyprVPN] to the ALPHA list.
- Added [QHeadPhones Transmission QTransmission] to the OMEGA list.

* Minor update: (180105)
- Added [git Nginx PlexMediaServer] to the ALPHA list.
- Log is now trimmed so only the last 10 operations are kept. This will only work with recent SortMyQPKGs builds, but once a recent build has executed 10 times, log should look fine.
- Record this package version in log operations.
- Add a nice separator line to the beginning of each operation.
- Remove '#' char mark from display. We can already see which list a package belongs to.

* Minor update: (180104.1)
- Moved [SABnzbd QSabNZBdPlus] ahead of [Sonarr], so Sonarr can find an operational downloader as it starts.

* Minor update: (180104)
- Sort operations will now be prepended to the log (instead of appended), so the most recent will be shown first in the web GUI. This means the log will look a little bit odd for a while.
- Added [SickGear] to the OMEGA list.

* Minor update: (180102)
- Manual 'fix' operations are now logged.
- Removed the coloured display text during manual execution. Packages are now marked with a hash character "#" instead. The hash indicates packages that will-be or were affected by sorting ops. Colour was nice when this script was only run manually, but is not needed and the ANSI codes were making logging needlessly difficult.

* Minor update: (180101)
- Shifted the ALPHA and OMEGA lists into external files. This should make editing them a bit easier.

* Minor update: (171224)
- Added [NodeJS QRuby Go Phlex HD_Station] to the ALPHA list.
- Moved [QNginx ruby] within the ALPHA list.
- Removed [Par2 Par2cmdline-MT] from the ALPHA list.
- Added [QSabNZBdPlus QSickBeard QSickRage MovieGrabber CouchPotato2 QCouchPotato Watcher3 Ombi Ombi3] to the OMEGA list.

** Major update: (171220)