@@ -1,5 +1,5 @@
 QPKG_NAME="SortMyQPKGs"
-QPKG_VER="180107"
+QPKG_VER="180110"
 QPKG_AUTHOR="OneCD"
 QPKG_SUMMARY="An automatic sorter for installed QPKGs so they launch in a predetermined order when your NAS next boots-up"
 QPKG_RC_NUM="500"
